tests/errors/sem.missing-const.struct-args.or
main :: () -> void {
    arr_t :: struct(t: int) {
        x := t;
    };

    arr_t({5;});
};
